UtahLiveDataTest/src/objects/Unit__c.object
<CustomObject>
    <description>This is for the program coding block in USBE</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodeFromFINET__c</fullName>
        <label>UNIT_CD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletedInFINET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In FINET</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeptCode__c</fullName>
        <formula>Account__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPT_CD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeptName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYearName__c</fullName>
        <formula>FiscalYear__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MST: Fiscal Year</label>
        <referenceTo>FiscalYear__c</referenceTo>
        <relationshipLabel>Units</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValueFromFINET__c</fullName>
        <label>UNIT_NM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unit</label>
    <nameField>
        <label>UNIT_CD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>